--- a/site/index.html
+++ b/site/index.html
@@ -37,7 +37,7 @@
   </div>
 </nav>
 
-<h1 class="main-title">My Menu</h1>
+<h1 class="text-center">My Menu</h1>
 <div class="row">
 
   <h2>Chicken</h2>
